--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
     "@types/react-dom": "^18.3.0",
     "@vercel/webpack-asset-relocator-loader": "^1.7.3",
     "css-loader": "^7.1.2",
-    "electron": "31.0.1",
+    "electron": "^28.3.3",
+    "fork-ts-checker-webpack-plugin": "^9.0.2",
     "node-loader": "^2.0.0",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3",
-    "fork-ts-checker-webpack-plugin": "^9.0.2"
+    "typescript": "^5.6.3"
   },
   "config": {
     "forge": {
