add POC version

--- a/package.json
+++ b/package.json
@@ -83,7 +83,8 @@
                   "js": "./src/renderer.tsx",
                   "name": "main_window",
                   "preload": {
-                    "js": "./src/preload.ts"
+                    "js": "./src/preload.ts",
+                    "config": "./webpack.preload.config.js"
                   }
                 }
               ]
