--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
+# Dependencies
 node_modules
+
+# Build artifacts
 .webpack
+out
+
+# IDE
+.vscode
+.idea
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+npm-debug.log*
+
+# Environment
+.env
+.env.local
