--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "license": "MIT",
   "dependencies": {
     "electron-squirrel-startup": "^1.0.1",
+    "node-pty": "^1.1.0-beta17",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0",
     "yaml": "^2.6.1"
   },
   "devDependencies": {
@@ -31,6 +34,7 @@
     "@electron-forge/maker-zip": "^7.4.0",
     "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
     "@electron-forge/plugin-webpack": "^7.4.0",
+    "@electron/rebuild": "^4.0.1",
     "@types/node": "^16.18.119",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
