--- a/package.json
+++ b/package.json
@@ -5,11 +5,18 @@
   "description": "My Electron application description",
   "main": ".webpack/main",
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "tauri": "tauri",
+    "tauri:dev": "tauri dev",
+    "tauri:build": "tauri build",
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\""
+    "lint": "echo \"No linting configured\"",
+    "build:deb": "npm run package && node build-deb.js"
   },
   "keywords": [],
   "author": {
@@ -18,6 +25,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@tauri-apps/api": "^1.6.0",
     "electron-squirrel-startup": "^1.0.1",
     "node-pty": "^1.1.0-beta17",
     "react": "^19.2.0",
@@ -35,23 +43,30 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
     "@electron-forge/plugin-webpack": "^7.4.0",
     "@electron/rebuild": "^4.0.1",
+    "@tauri-apps/cli": "^1.6.3",
     "@types/node": "^16.18.119",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vercel/webpack-asset-relocator-loader": "^1.7.3",
+    "@vitejs/plugin-react": "^4.7.0",
     "css-loader": "^7.1.2",
     "electron": "^28.3.3",
+    "electron-builder": "^26.0.12",
+    "electron-installer-debian": "^3.2.0",
     "fork-ts-checker-webpack-plugin": "^9.0.2",
     "node-loader": "^2.0.0",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "vite": "^5.4.21"
   },
   "config": {
     "forge": {
       "packagerConfig": {
-        "asar": true
+        "asar": {
+          "unpack": "**/node_modules/node-pty/**"
+        }
       },
       "rebuildConfig": {},
       "makers": [
@@ -67,6 +82,9 @@
         },
         {
           "name": "@electron-forge/maker-deb",
+          "platforms": [
+            "linux"
+          ],
           "config": {}
         },
         {
@@ -75,6 +93,9 @@
         }
       ],
       "plugins": [
+        {
+          "name": "@electron-forge/plugin-auto-unpack-natives"
+        },
         {
           "name": "@electron-forge/plugin-webpack",
           "config": {
@@ -96,6 +117,23 @@
           }
         }
       ]
+    }
+  },
+  "build": {
+    "appId": "com.vit.kubecli",
+    "productName": "KubeCLI",
+    "files": [
+      ".webpack/**/*",
+      "package.json"
+    ],
+    "directories": {
+      "output": "dist"
+    },
+    "linux": {
+      "target": [
+        "deb"
+      ],
+      "category": "Development"
     }
   }
 }
